[gd_scene load_steps=14 format=3 uid="uid://cfesvjhulwkvx"]

[ext_resource type="Texture2D" uid="uid://18dhv0jowwdt" path="res://assets/sprites/dungeon/dungeonDecoration_0.png" id="1_j4fss"]
[ext_resource type="Script" path="res://assets/scripts/fire.gd" id="2_dth6p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bq7qy"]
atlas = ExtResource("1_j4fss")
region = Rect2(128, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_74dhy"]
atlas = ExtResource("1_j4fss")
region = Rect2(144, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbkv8"]
atlas = ExtResource("1_j4fss")
region = Rect2(160, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktkxf"]
atlas = ExtResource("1_j4fss")
region = Rect2(176, 176, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_51dwp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bq7qy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74dhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbkv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktkxf")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Gradient" id="Gradient_8on2x"]
offsets = PackedFloat32Array(0, 0.227758, 0.608541)
colors = PackedColorArray(1, 1, 1, 1, 0.395833, 0.395833, 0.395833, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jg4h0"]
gradient = SubResource("Gradient_8on2x")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 1)

[sub_resource type="Animation" id="Animation_jxk6r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}

[sub_resource type="Animation" id="Animation_lb1jd"]
resource_name = "campfire_light_flicker"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.733333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 0.7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vxxca"]
_data = {
"RESET": SubResource("Animation_jxk6r"),
"campfire_light_flicker": SubResource("Animation_lb1jd")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_2bi4h"]
radius = 19.0263

[node name="Fire" type="AnimatedSprite2D"]
position = Vector2(-68, -50)
sprite_frames = SubResource("SpriteFrames_51dwp")
autoplay = "default"
frame_progress = 0.810732
script = ExtResource("2_dth6p")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0.909804, 0.666667, 0.0823529, 1)
energy = 0.5
texture = SubResource("GradientTexture2D_jg4h0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vxxca")
}
autoplay = "campfire_light_flicker"

[node name="RestArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RestArea"]
shape = SubResource("CircleShape2D_2bi4h")

[connection signal="body_entered" from="RestArea" to="." method="_on_rest_area_body_entered"]
